OO-8579: use a modifiable list to sort the categories